# opssage

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION_GUIDE.md  Dockerfile  GETTING_STARTED.md  IMPLEMENT.md  MIGRATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SETUP.md  UI_STYLE.md  USER_GUIDE.md  config.example.yaml  config.yaml  copy.py  docker-compose.yml  env.example  kind-config.yaml  pyproject.toml  run.py  run_agent.sh  setup_public_url.sh  test_telegram_link.py
agents/: __init__.py  config.py  debug.ipynb  main.py  models.py  test_slack_integration.py
agents/agents/: analyst_agent.py  executor_agent.py  planner_agent.py  supervisor_agent.py
agents/examples/alerts/: etcd-down.json  node-down.json
agents/llms/: gemini.py
agents/prompts/: analyst_prompt.py  executor_prompt.py  planner_prompt.py  supervisor_prompt.py
agents/utils/: __init__.py  excutor_tools.py  parsers.py  planner_tools.py  search_tool.py  slack_events.py  slack_service.py  tools_registry.py
apis/: __init__.py  documents.py  main.py  server.py
dashboard/: README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Badge.tsx  Button.tsx  Card.tsx  Layout.tsx  ThemeProvider.tsx
dashboard/src/pages/: Alerts.tsx  Dashboard.tsx  Documents.tsx  IncidentDetail.tsx  Incidents.tsx  Search.tsx
dashboard/src/types/: index.ts
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/: backend-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  namespace.yaml  storage.yaml
docker/: Dockerfile.backend  Dockerfile.dashboard  Dockerfile.dev  Dockerfile.mock-services  mock-services.py
docker/prometheus/: prometheus.yml
docs/: API_REFACTORING.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  DASHBOARD_INCIDENT_VIEW.md  DATABASE_PERSISTENCE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  GEMINI_MODEL_FIX.md  KIND_GUIDE.md  KNOWLEDGE_BASE.md  README.md  SLACK_SETUP.md  TELEGRAM_LINKS_FIX.md  TELEGRAM_NOTIFICATION_FIX.md  VALIDATION_ERROR_FIX.md
docs/archive/: DASHBOARD_IMPLEMENTATION.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_KIND_IMPLEMENTATION.md  RAG_GUIDE.md  RAG_IMPLEMENTATION.md
docs/diagrams/: opssage.drawio
extras/chromadb/: compose.yaml
hacks/: QUICK_START.md  README.md  SCENARIO_TESTING.md  curl_examples.sh  test_alerts.sh  test_scenarios.sh
hacks/alerts/: 01_crashloop.json  02_cpu_exhaustion.json  03_oom_kill.json  04_disk_pressure.json  05_network_latency.json  06_db_connections.json  07_service_down.json  08_failed_deployment.json  scenario_1_pod_crashloop.json  scenario_2_node_cpu.json  scenario_2_node_not_ready.json  scenario_2_pod_throttling.json  scenario_3_auth_down.json  scenario_3_auth_errors.json  scenario_3_order_500s.json  scenario_3_payment_dependency.json
sages/: agent.py  api.py  config.py  configs.py  context_store.py  logging.py  models.py  notifications.py  orchestrator.py  tools.py
sages/db/: __init__.py  database.py  models.py
sages/rag/: __init__.py  document_processor.py  embeddings.py  vector_store.py
sages/subagents/: aica.py  krea.py  rcara.py
scripts/: dev-setup.sh  kind-deploy.sh  kind-setup.sh  kind-teardown.sh  run_e2e_tests.py  test_rag.py  verify_refactoring.py
tests/: README.md  TELEGRAM_TEST_GUIDE.md  conftest.py  test_api.py  test_context_store.py  test_e2e_scenarios.py  test_models.py  test_scenarios.py  test_telegram_integration.py  test_tools.py
