[project]
name = "irs-kube-multi-agent"
version = "0.1.0"
description = "Multi-Agent for Kubernetes Incident Response System"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "ithaquakr", email = "ithadev.nguyen@gmail.com" }]
keywords = ["kubernetes", "agent"]
dependencies = [
    "google-genai>=1.21.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.4.8",
    "pydantic>=2.11.7",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph-supervisor>=0.0.27",
    "langchain-tavily>=0.2.6",
    "slack-sdk>=3.27.1",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.29.5",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
